# zCore

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/ata/: ahci.rs
drivers/src/bus/: klog.rs  mod.rs  pci.rs  pci_drivers.rs
drivers/src/display/: mod.rs  nvidia.rs  uefi.rs
drivers/src/mock/: display.rs
drivers/src/net/: e1000.rs  e1000e.rs  ixgbe.rs  loopback.rs  mod.rs  rtlx.rs
drivers/src/nvme/: interface.rs
drivers/src/scheme/: mod.rs  net.rs
drivers/src/uart/: buffered.rs
drivers/src/usb/: xhci_hid.rs
drivers/src/utils/: deferred_job.rs  dma.rs  mod.rs
drivers/src/virtio/: mod.rs  virtio_pci.rs
kernel-hal/: Cargo.toml
kernel-hal/src/: drivers.rs  hal_fn.rs  kernel_handler.rs  lib.rs
kernel-hal/src/bare/: boot.rs  mem.rs  net.rs
kernel-hal/src/common/: console.rs  ipi.rs
kernel-hal/src/libos/: mem.rs
kernel-hal/src/utils/: deferred_job.rs  mod.rs
linux-object/src/: error.rs  lib.rs  process.rs  time.rs
linux-object/src/fs/: epoll.rs  eventfd.rs  ioctl.rs  mock.rs  mod.rs  proc_self.rs  procfs.rs  stdio.rs
linux-object/src/loader/: abi.rs  mod.rs
linux-object/src/net/: listen_table.rs  mod.rs  netlink.rs  packet.rs  raw.rs  socket_address.rs  (+3 more)
linux-syscall/src/: lib.rs  misc.rs  net.rs  syscall.h.in  task.rs  time.rs
loader/: Cargo.toml
loader/src/: linux.rs  zircon.rs
rboot/: Cargo.toml  Makefile  rust-toolchain.toml
rboot/src/: logo.raw  logo.rs  main.rs  page_table.rs  progress.rs
tools/apk/: meson.build
tools/dhcpcd/: config.h  config.mk
tools/edhcpc/: edhcpc  edhcpc.c
tools/nl_dump/: nl_dump  nl_dump.c
xtask/: Cargo.toml
zCore/: Cargo.toml  Makefile  aarch64.json  riscv64.json  run-qemu-macvtap.sh  x86_64.json
zCore/src/: fs.rs  handler.rs  logging.rs  main.rs  memory.rs  memory_x86_64.rs  utils.rs
zircon-object/: Cargo.toml
zircon-syscall/: Cargo.toml
zircon-syscall/src/: futex.rs
(+35 files in other folders)
